--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -169,18 +169,17 @@
     </div>
     <div class="container">
         <div class="logo">
-            <!-- <img src="https://via.placeholder.com/100" alt="Logo"> -->
         </div>
         <h1>ADMIN PANEL</h1>
         <p>Control panel login</p>
         <form action="/admin/login" method="post">
             <div class="form-group" >
                 <label for="username">email</label>
-                <input type="text" id="username" name="email" value="admin@switchcart.com">
+                <input type="text" id="username" name="email" >
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" value="Admin@123">
+                <input type="password" id="password" name="password" >
             </div>
             <button type="submit" class="button">Login</button>
 
